<package>
  <name>velma_low_level_safety</name>
  <version>0.1.1</version>
  <license>BSD</license>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <description>
    velma_low_level_safety
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build deps are queried automatically with orocos_use_package() -->
  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>velma_low_level_interface_msgs</build_depend>
  <build_depend>velma_low_level_interface</build_depend>
  <build_depend>barrett_hand_controller_msgs</build_depend>
  <build_depend>kuka_lwr_fri</build_depend>
  <build_depend>common_interfaces</build_depend>
  <build_depend>common_behavior</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>velma_low_level_interface</run_depend>
  <run_depend>common_interfaces</run_depend>
  <run_depend>velma_low_level_behaviors</run_depend>

  <!-- ROS Msg Typekits and Srv Proxies -->
  <build_depend>rtt_sensor_msgs</build_depend>
  <run_depend>rtt_sensor_msgs</run_depend>

  <export>
    <rtt_ros>
      <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
      <plugin_depend>rtt_sensor_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
